update ci configuration to cover scenarios
* 0.12.0 - original
* v0.13.0 - omits "v" version prefix in download filename
* v0.14.0 - omits version completely in download filename

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,14 @@
 language: c
 
-script: asdf plugin-test k9s $TRAVIS_BUILD_DIR --asdf-tool-version v0.13.6
+os:
+  - linux
+  - osx
 
 before_script:
   - git clone --branch master --depth=1 https://github.com/asdf-vm/asdf.git asdf
   - source asdf/asdf.sh
 
-os:
-  - linux
-  - osx
-
-addons:
-  apt:
-    packages:
-    - jq
-
-before_install:
-  - if [ $TRAVIS_OS_NAME = osx ]; then brew update && brew install jq; fi
+script:
+  - asdf plugin-test k9s $TRAVIS_BUILD_DIR --asdf-tool-version 0.12.0
+  - asdf plugin-test k9s $TRAVIS_BUILD_DIR --asdf-tool-version v0.13.0
+  - asdf plugin-test k9s $TRAVIS_BUILD_DIR --asdf-tool-version v0.14.0
