asdf plugin-test assumes master branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ os:
 before_script:
   - git clone --branch master --depth=1 https://github.com/asdf-vm/asdf.git asdf
   - source asdf/asdf.sh
+  # workaround: asdf plugin-test assumes master branch
+  - cd $TRAVIS_BUILD_DIR && git checkout -b master || echo 'Aleady on master'
 
 script:
   - asdf plugin-test k9s $TRAVIS_BUILD_DIR --asdf-tool-version 0.12.0
