--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,10 @@ os:
 before_script:
   - git clone --branch master --depth=1 https://github.com/asdf-vm/asdf.git asdf
   - source asdf/asdf.sh
+  # workaround: asdf plugin-test assumes master branch
+  - cd $TRAVIS_BUILD_DIR && git checkout -b master || echo 'Already on master'
 
 script:
-  - asdf plugin-test k9s $TRAVIS_BUILD_DIR --asdf-plugin-gitref $TRAVIS_COMMIT --asdf-tool-version 0.12.0
-  - asdf plugin-test k9s $TRAVIS_BUILD_DIR --asdf-plugin-gitref $TRAVIS_COMMIT --asdf-tool-version v0.13.0
-  - asdf plugin-test k9s $TRAVIS_BUILD_DIR --asdf-plugin-gitref $TRAVIS_COMMIT --asdf-tool-version v0.14.0
+  - asdf plugin-test k9s $TRAVIS_BUILD_DIR --asdf-tool-version 0.12.0
+  - asdf plugin-test k9s $TRAVIS_BUILD_DIR --asdf-tool-version v0.13.0
+  - asdf plugin-test k9s $TRAVIS_BUILD_DIR --asdf-tool-version v0.14.0
