--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,12 +19,12 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: asdf_plugin_test_latest
-        uses: asdf-vm/actions/plugin-test@v1.0.1
-        with:
-          command: k9s help
-        env:
-          GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # - name: asdf_plugin_test_latest
+      #   uses: asdf-vm/actions/plugin-test@v1.0.1
+      #   with:
+      #     command: k9s help
+      #   env:
+      #     GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # these tests to cover when the naming convention of the download files changed
 
