--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,6 +10,9 @@ on:
   # schedule:
   #   - cron: "0 0 * * 5"
 
+env:
+  GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
   test:
     strategy:
@@ -20,34 +23,32 @@ jobs:
 
     steps:
       - name: asdf_plugin_test_latest
-        uses: asdf-vm/actions/plugin-test@v1.0.1
+        uses: asdf-vm/actions/plugin-test@v2
         with:
           command: k9s help
-        env:
-          GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       # these tests to cover when the naming convention of the download files changed
 
       - name: asdf_plugin_test_0_12_0
-        uses: asdf-vm/actions/plugin-test@v1.0.1
+        uses: asdf-vm/actions/plugin-test@v2
         with:
           command: k9s help
           version: "0.12.0"
-        env:
-          GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: asdf_plugin_test_0_13_0
-        uses: asdf-vm/actions/plugin-test@v1.0.1
+        uses: asdf-vm/actions/plugin-test@v2
         with:
           command: k9s help
           version: "v0.13.0"
-        env:
-          GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: asdf_plugin_test_0_14_0
-        uses: asdf-vm/actions/plugin-test@v1.0.1
+        uses: asdf-vm/actions/plugin-test@v2
         with:
           command: k9s help
           version: "v0.14.0"
-        env:
-          GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: asdf_plugin_test_0_27_0
+        uses: asdf-vm/actions/plugin-test@v2
+        with:
+          command: k9s help
+          version: "v0.27.0"
